--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -37,8 +37,16 @@
         </DataTemplate>
 
         <DataTemplate x:Key="PieceTemplate">
-            <Image Name="img"></Image>
+        	<Grid>
+        		<Rectangle Name="rect" StrokeDashArray="0.5 1.0" Stroke="#FFE2ED14" StrokeThickness="2" RadiusX="10" RadiusY="10" Margin="2" Visibility="Hidden"/>     	
+				<Image Name="img" Source="/Sinobyl.WPF;component/Images/Pieces/Alpha/300wp.png"></Image>    
+			</Grid>
+
             <DataTemplate.Triggers>
+                <DataTrigger Binding="{Binding IsDraggable}" Value="True">
+                    <Setter TargetName="img" Property="Cursor" Value="Hand"/>
+					<Setter TargetName="rect" Property="Visibility" Value="Visible"/>
+                </DataTrigger>
                 <DataTrigger Binding="{Binding Path=Piece}">
                     <DataTrigger.Value>
                         <engine:ChessPiece>WPawn</engine:ChessPiece>
