--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -8,7 +8,10 @@
              xmlns:vm="clr-namespace:Sinobyl.WPF.ViewModels"
              xmlns:SampleData="clr-namespace:Expression.Blend.SampleData.BoardDesignData" x:Class="Sinobyl.WPF.Views.Board" 
              xmlns:convert="clr-namespace:Sinobyl.WPF.Converters"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:behave="clr-namespace:Sinobyl.WPF.Behaviors"
              mc:Ignorable="d" 
+    
              d:DesignHeight="500" d:DesignWidth="500"
 			 d:DataContext="{Binding Source={StaticResource designBoard}}">
 	<UserControl.Resources>
@@ -39,9 +42,12 @@
         <DataTemplate x:Key="PieceTemplate">
         	<Grid>
         		<Rectangle Name="rect" StrokeDashArray="0.5 1.0" Stroke="#FFE2ED14" StrokeThickness="2" RadiusX="10" RadiusY="10" Margin="2" Visibility="Hidden"/>     	
-				<Image Name="img" Source="/Sinobyl.WPF;component/Images/Pieces/Alpha/300wp.png"></Image>    
+				<Image Name="img" Source="/Sinobyl.WPF;component/Images/Pieces/Alpha/300wp.png"></Image>  
+                <i:Interaction.Behaviors>
+                    <behave:PieceDragBehavior></behave:PieceDragBehavior>
+                </i:Interaction.Behaviors>
 			</Grid>
-
+            
             <DataTemplate.Triggers>
                 <DataTrigger Binding="{Binding IsDraggable}" Value="True">
                     <Setter TargetName="img" Property="Cursor" Value="Hand"/>
