--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -43,7 +43,11 @@
         	<Grid>
         		<Rectangle Name="rect" StrokeDashArray="0.5 1.0" Stroke="#FFE2ED14" StrokeThickness="2" RadiusX="10" RadiusY="10" Margin="2" Visibility="Hidden"/>
                 <Button Name="cmdButton" Command="{Binding Path=DragStartCommand}" Margin="10" Visibility="Collapsed"></Button>
-				<Image Name="img" Source="/Sinobyl.WPF;component/Images/Pieces/Alpha/300wp.png"></Image>  
+				<Image Name="img" Source="/Sinobyl.WPF;component/Images/Pieces/Alpha/300wp.png" RenderTransformOrigin="0.5,0.5">
+					<Image.RenderTransform>
+							<TranslateTransform X="{Binding Path=DragOffset.X}" Y="{Binding Path=DragOffset.Y}"/>
+					</Image.RenderTransform>
+				</Image>  
                 <i:Interaction.Behaviors>
                     <behave:PieceDragBehavior></behave:PieceDragBehavior>
                 </i:Interaction.Behaviors>
