--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -26,7 +26,7 @@
         <drag:DragDropContext x:Key="dragDropContext"></drag:DragDropContext>
 
         <DataTemplate x:Key="BoardSquareTemplate">
-            <Grid Name="grid" Background="#FF909573">
+            <Grid Name="grid" Background="#FF909573" drag:DragDropProperties.DropTarget="{Binding}" drag:DragDropProperties.DragDropContext="{StaticResource dragDropContext}">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Hidden">
                     <TextBlock TextWrapping="Wrap" Text="{Binding Name, Mode=OneWay}"/>
                 </StackPanel>
@@ -45,8 +45,8 @@
         		<Rectangle Name="rect" StrokeDashArray="0.5 1.0" Stroke="#FFE2ED14" StrokeThickness="2" RadiusX="10" RadiusY="10" Margin="2" Visibility="Hidden"/>
                 
 				<Image Name="img" Source="/Sinobyl.WPF;component/Images/Pieces/Alpha/300wp.png" 
-                       RenderTransformOrigin="0.5,0.5" 
-                       drag:DragDropProperties.DragDropContext="{StaticResource ResourceKey=dragDropContext}" >
+                       RenderTransformOrigin="0.5,0.5" drag:DragDropProperties.DragSource="{Binding}" drag:DragDropProperties.DragDropContext="{StaticResource dragDropContext}"
+                        >
 					<Image.RenderTransform>
 							<TranslateTransform X="{Binding Path=RenderOffset.X}" Y="{Binding Path=RenderOffset.Y}"/>
 					</Image.RenderTransform>
