git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@92 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -37,6 +37,13 @@
                     <Setter TargetName="grid" Property="Background" Value="#FFB0B593"></Setter>
                 </DataTrigger>
                 
+                <DataTrigger Binding="{Binding Path=(drag:DragDropProperties.IsActiveValidDropTarget), ElementName=grid}" Value="True">
+                    <Setter TargetName="grid" Property="Background" Value="White"></Setter>
+                </DataTrigger>
+                <MultiDataTrigger>
+                    
+                    
+                </MultiDataTrigger>
             </DataTemplate.Triggers>
         </DataTemplate>
 
