--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -52,9 +52,10 @@
         		<Rectangle Name="rect" StrokeDashArray="0.5 1.0" Stroke="#FFE2ED14" StrokeThickness="2" RadiusX="10" RadiusY="10" Margin="2" Visibility="Hidden"/>
                 
 				<Image Name="img" Source="/Sinobyl.WPF;component/Images/Pieces/Alpha/300wp.png" 
-                       RenderTransformOrigin="0.5,0.5" drag:DragDropProperties.DragSource="{Binding}" drag:DragDropProperties.DragDropContext="{StaticResource dragDropContext}"
+                       drag:DragDropProperties.DragSource="{Binding}" drag:DragDropProperties.DragDropContext="{StaticResource dragDropContext}"
                         >
 					<Image.RenderTransform>
+                        
                         <TranslateTransform X="{Binding Path=(drag:DragDropProperties.DragOffset).X, ElementName=img}" Y="{Binding Path=(drag:DragDropProperties.DragOffset).Y, ElementName=img}"/>
 					</Image.RenderTransform>
 				</Image>  
