git-svn-id: https://subversion.assembla.com/svn/sinobyl/trunk@95 a0bf3537-8e53-448f-ae4a-0b965e85af5e

--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -37,7 +37,7 @@
                     <Setter TargetName="grid" Property="Background" Value="#FFB0B593"></Setter>
                 </DataTrigger>
                 
-                <DataTrigger Binding="{Binding Path=(drag:DragDropProperties.IsActiveValidDropTarget), ElementName=grid}" Value="True">
+                <DataTrigger Binding="{Binding Path=(drag:DragDropProperties.IsActiveSelectedDropTarget), ElementName=grid}" Value="True">
                     <Setter TargetName="grid" Property="Background" Value="White"></Setter>
                 </DataTrigger>
                 <MultiDataTrigger>
@@ -63,7 +63,7 @@
             
             <DataTemplate.Triggers>
                 
-                <DataTrigger Binding="{Binding ElementName=cmdButton, Path=IsEnabled}" Value="True">
+                <DataTrigger Binding="{Binding Path=CanDrag}" Value="True">
                     <Setter TargetName="img" Property="Cursor" Value="Hand"/>
 					<Setter TargetName="rect" Property="Visibility" Value="Visible"/>
                 </DataTrigger>
