--- a/Sinobyl/Sinobyl.WPF/Views/Board.xaml
+++ b/Sinobyl/Sinobyl.WPF/Views/Board.xaml
@@ -26,7 +26,7 @@
         <drag:DragDropContext x:Key="dragDropContext"></drag:DragDropContext>
 
         <DataTemplate x:Key="BoardSquareTemplate">
-            <Grid Name="grid" Background="#FF909573" drag:DragDropProperties.DropTarget="{Binding}" drag:DragDropProperties.DragDropContext="{StaticResource dragDropContext}">
+            <Grid Name="grid" Background="#FF909573" drag:DragDropProperties.DropTarget="{Binding}">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Hidden">
                     <TextBlock TextWrapping="Wrap" Text="{Binding Name, Mode=OneWay}"/>
                 </StackPanel>
@@ -64,7 +64,7 @@
         		<Rectangle Name="rect" StrokeDashArray="0.5 1.0" Stroke="#FFE2ED14" StrokeThickness="2" RadiusX="10" RadiusY="10" Margin="2" Visibility="Hidden"/>
                 
 				<Image Name="img" Source="/Sinobyl.WPF;component/Images/Pieces/Alpha/300wp.png" 
-                       drag:DragDropProperties.DragSource="{Binding}" drag:DragDropProperties.DragDropContext="{StaticResource dragDropContext}"
+                       drag:DragDropProperties.DragSource="{Binding}"
                         >
 					<Image.RenderTransform>
                         
